--- a/app/view/inside_blog.html
+++ b/app/view/inside_blog.html
@@ -222,10 +222,10 @@
 
   <!-- Optional JavaScript -->
   <script src="./../javascript/utils.js"></script>
-  <!-- <script src="./../javascript/user.js"></script>
+  <script src="./../javascript/user.js"></script>
   <script src="./../javascript/comment.js"></script>
   <script src="./../javascript/post.js"></script>
-  <script src="./../javascript/datahandler.js"></script> -->
+  <script src="./../javascript/datahandler.js"></script>
   
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
