--- a/app/view/blog.html
+++ b/app/view/blog.html
@@ -107,7 +107,7 @@
                         <label for="confirmarContraseña">Confirmar Contraseña</label>
                         <input type="password" class="form-control" id="confirmarContraseña" placeholder="Confirma tu contraseña">
                     </div>
-                    <button type="submit" class="btn btn-success btn-block">Registrarse</button>
+                    <button type="submit" class="btn btn-success btn-block" onclick="createUser()">Registrarse</button>
                 </form>
             </div>
         </div>
@@ -221,6 +221,7 @@
   <!-- Optional JavaScript -->
   <script src="./../javascript/utils.js"></script>
   <script src="./../javascript/ajax-handler.js"></script>
+ 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
