--- a/app/view/createblog.html
+++ b/app/view/createblog.html
@@ -107,7 +107,7 @@
                         <label for="confirmarContraseña">Confirmar Contraseña</label>
                         <input type="password" class="form-control" id="confirmarContraseña" placeholder="Confirma tu contraseña">
                     </div>
-                    <button type="submit" class="btn btn-success btn-block">Registrarse</button>
+                    <button type="submit" class="btn btn-success btn-block" id="botonRegistrarse">Registrarse</button>
                 </form>
             </div>
         </div>
@@ -178,7 +178,8 @@
     </div> <!--CONTENIDO-->
   <!-- Optional JavaScript -->
 
-  <script src="./../javascript/utils.js"></script>
+  <script src="./../javascript/sidebar.js"></script>
+  <script src="./../javascript/user.js"></script>
   <script src="./../javascript/ajax-handler.js"></script>
   
   <!-- jQuery firsV t, then Popper.js, then Bootstrap JS -->
