--- a/app/view/home.html
+++ b/app/view/home.html
@@ -109,7 +109,7 @@
                         <label for="confirmarContraseña">Confirmar Contraseña</label>
                         <input type="password" class="form-control" id="confirmarContraseña" placeholder="Confirma tu contraseña">
                     </div>
-                    <button type="submit" class="btn btn-success btn-block">Registrarse</button>
+                    <button type="submit" class="btn btn-success btn-block"id="botonRegistrarse">Registrarse</button>
                 </form>
             </div>
         </div>
@@ -228,7 +228,8 @@
 
 
   <!-- Optional JavaScript -->
-  <script src="./../javascript/utils.js"></script>
+  <script  src="./../javascript/sidebar.js"></script>
+  <script src="./../javascript/user.js"></script>
   <script src="./../javascript/ajax-handler.js"></script>
  
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
