--- a/app/view/inside_blog.html
+++ b/app/view/inside_blog.html
@@ -108,7 +108,7 @@
                           <label for="confirmarContraseña">Confirmar Contraseña</label>
                           <input type="password" class="form-control" id="confirmarContraseña" placeholder="Confirma tu contraseña">
                       </div>
-                      <button type="submit" class="btn btn-success btn-block">Registrarse</button>
+                      <button type="submit" class="btn btn-success btn-block" id="botonRegistrarse">Registrarse</button>
                   </form>
               </div>
           </div>
@@ -221,14 +221,10 @@
     </div> <!--CONTENIDO-->
 
   <!-- Optional JavaScript -->
-  <script src="./../javascript/utils.js"></script>
+  <script src="./../javascript/sidebar.js"></script>
   <script src="./../javascript/ajax-handler.js"></script>
-  <!-- <script src="./../javascript/user.js"></script>
-  <script src="./../javascript/comment.js"></script>
-  <script src="./../javascript/post.js"></script>
-  <script src="./../javascript/datahandler.js"></script>
-  
-   jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="./../javascript/user.js"></script>
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
   </script>
