--- a/app/view/personal_data.html
+++ b/app/view/personal_data.html
@@ -111,7 +111,7 @@
                         <label for="confirmarContraseña">Confirmar Contraseña</label>
                         <input type="password" class="form-control" id="confirmarContraseña" placeholder="Confirma tu contraseña">
                     </div>
-                    <button type="submit" class="btn btn-success btn-block">Registrarse</button>
+                    <button type="submit" class="btn btn-success btn-block" id="botonRegistrarse">Registrarse</button>
                 </form>
             </div>
         </div>
@@ -210,7 +210,8 @@
   <!--CONTENIDO--> 
 
   <!-- Optional JavaScript -->
-  <script src="./../javascript/utils.js"></script>
+  <script type="module" src="./../javascript/sidebar.js"></script>
+  <script src="./../javascript/user.js"></script>
   <script src="./../javascript/ajax-handler.js"></script>
 
 
