--- a/app/view/personal_data.html
+++ b/app/view/personal_data.html
@@ -94,7 +94,7 @@
                 </button>
             </div>
             <div class="modal-body bg-registro-body">
-                <form>
+                <form id="formularioRegistro">
                     <div class="form-group">
                         <label for="nombre">Nombre</label>
                         <input type="text" class="form-control" id="nombre" placeholder="Ingresa tu nombre">
