--- a/app/view/home.html
+++ b/app/view/home.html
@@ -70,7 +70,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary btn-block">Login</button>
+                        <button type="submit" class="btn btn-primary btn-block"id="loginButton">Login</button>
                     </div>
                 </form>
                 <p class="text-center">¿No tienes cuenta? <a href="#" data-dismiss="modal" data-toggle="modal"
