login modal update

--- a/app/view/blog.html
+++ b/app/view/blog.html
@@ -46,7 +46,7 @@
                 </button>
             </div>
             <div class="modal-body bg-login-body">
-                <form>
+                <form id="formularioLogin">
                     <div class="form-group">
                         <label for="CorreoLogin">Correo</label>
                         <div class="input-group">
