--- a/app/view/createblog.html
+++ b/app/view/createblog.html
@@ -139,7 +139,7 @@
                   <div id="contenidoPrincipal" style="height: 60Vh;">
                     
                     <div class="whitespace"></div>
-                    <textarea name="" id="" class="form-control" style="width: 100%; height: 100%;" placeholder="Escribe aquí..." id="CreateText"></textarea>
+                    <textarea name="" class="form-control" style="width: 100%; height: 100%;" placeholder="Escribe aquí..." id="CreateText"></textarea>
                   </div>
       </div> <!-- Main Content Container -->
       
@@ -181,6 +181,8 @@
   <script src="./../javascript/sidebar.js"></script>
   <script src="./../javascript/user.js"></script>
   <script src="./../javascript/ajax-handler.js"></script>
+  <script src="./../javascript/post.js"></script>
+
   
   <!-- jQuery firsV t, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
