--- a/app/view/blog.html
+++ b/app/view/blog.html
@@ -123,6 +123,7 @@
 
           <div class="cardBody col-md-12">
             <div class="row">
+              
               <img class="card-img" src="https://picsum.photos/200/300">
               <h3 class="cardTitle">Titulo max 28 caracteres</h3>
               <p class="cardText">Una descripcion muy cool, que esta muy cool</p>
@@ -222,6 +223,7 @@
   <script src="./../javascript/sidebar.js"></script>
   <script src="./../javascript/user.js"></script>
   <script src="./../javascript/ajax-handler.js"></script>
+  <script src="./../javascript/post.js"></script>
  
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
