Se medio finalizao inside Blog

--- a/app/view/blog.html
+++ b/app/view/blog.html
@@ -15,7 +15,7 @@
 </head> <body>
 
     <nav class="bgnav navbar navbar-expand-sm navbar-light"> <!--NAVBAR-->
-      <a class="navbar-brand" href="home.html" id="home-link">LOGO</a>
+      <a class="navbar-brand" href="home.html" id="home-link"><img src="https://th.bing.com/th/id/OIG2.mvAYZ_0sG8BPe5i4r0kB?w=1024&h=1024&rs=1&pid=ImgDetMain" style="height: 50px; width:50px"></a>
       <div class="flex-grow-1">
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control col-lg-5" type="text" placeholder="Lorem Ipsum">
@@ -152,8 +152,8 @@
         </div> <!-- Left Sidebar -->
 
         <div class="col-md-4 container" id="Main_Content"> <!-- Main Content Container -->
-          <div class="whitespace"></div>
-          <div class="card text-left">
+        
+          <!-- <div class="card text-left">
             <img class="card-img-preview" src="https://picsum.photos/200/320">
             <div class="card-body">
               <h4 class="card-title">Title</h4>
@@ -163,7 +163,7 @@
               <p>FECHA: 25/04/2024</p>
               <p>TEMAS: salud mental, dinero, etc</p>
             </div>
-          </div>
+          </div> -->
         </div> <!-- Main Content Container -->
   
         <div class="col-md-2 align-items-center justify-content-end" id="right_sidebar"><!--RightSidebar-->
@@ -200,7 +200,7 @@
 
     </div> <!--CONTENIDO-->
 
-    <nav aria-label="Page navigation"> <!--Page Navigation-->
+    <nav aria-label="Page navigation" id="painationContainer"> <!--Page Navigation-->
       <ul class="pagination justify-content-center">
         <li class="page-item disabled">
           <a class="page-link" href="#" aria-label="Previous">
