--- a/app/view/createblog.html
+++ b/app/view/createblog.html
@@ -15,7 +15,7 @@
 </head> <body>
 
     <nav class="bgnav navbar navbar-expand-sm navbar-light"> <!--NAVBAR-->
-      <a class="navbar-brand" href="home.html" id="home-link">LOGO</a>
+      <a class="navbar-brand" href="home.html" id="home-link"><img src="https://th.bing.com/th/id/OIG2.mvAYZ_0sG8BPe5i4r0kB?w=1024&h=1024&rs=1&pid=ImgDetMain" style="height: 50px; width:50px"></a>
       <div class="flex-grow-1">
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control col-lg-5" type="text" placeholder="Lorem Ipsum">
