--- a/app/view/blog.html
+++ b/app/view/blog.html
@@ -115,55 +115,16 @@
 </div>
 <!--Registrarse MODAL-->
 
-    <div class="container-fluid"> <!-- CONTENIDO-->
+    <div class="container-fluid" > <!-- CONTENIDO-->
       <div class="row">
    
         <div class="col-md-6" id="left">  <!-- Left Sidebar -->
-          <div class="whitespace"></div>
-
-          <div class="cardBody col-md-12">
-            <div class="row">
-              
-              <img class="card-img" src="https://picsum.photos/200/300">
-              <h3 class="cardTitle">Titulo max 28 caracteres</h3>
-              <p class="cardText">Una descripcion muy cool, que esta muy cool</p>
-            </div>
-          </div>
-          <div class="whitespace"></div>
-
-          <div class="cardBody col-md-12">
-            <div class="row">
-              <img class="card-img" src="https://picsum.photos/200/301">
-              <h3 class="cardTitle">Titulo max 28 caracteres</h3>
-              <p class="cardText">Una descripcion muy cool, que esta muy cool</p>
-            </div>
-          </div>
-          <div class="whitespace"></div>
-
-          <div class="cardBody col-md-12">
-            <div class="row">
-              <img class="card-img" src="https://picsum.photos/200/320">
-              <h3 class="cardTitle">Titulo max 28 caracteres</h3>
-              <p class="cardText">Una descripcion muy cool, que esta muy cool</p>
-            </div>
-          </div>
-          <div class="whitespace"></div>
+          
           
         </div> <!-- Left Sidebar -->
 
         <div class="col-md-4 container" id="Main_Content"> <!-- Main Content Container -->
-          <div class="whitespace"></div>
-          <div class="card text-left">
-            <img class="card-img-preview" src="https://picsum.photos/200/320">
-            <div class="card-body">
-              <h4 class="card-title">Title</h4>
-              <p class="card-text">Una descripcion muy cool, que esta muy cool</p>
-              <p>TIEMPO DE LECTURA: 12:00 minutos</p>
-              <p>AUTOR: Alex</p>
-              <p>FECHA: 25/04/2024</p>
-              <p>TEMAS: salud mental, dinero, etc</p>
-            </div>
-          </div>
+          
         </div> <!-- Main Content Container -->
   
         <div class="col-md-2 align-items-center justify-content-end" id="right_sidebar"><!--RightSidebar-->
@@ -200,10 +161,10 @@
 
     </div> <!--CONTENIDO-->
 
-    <nav aria-label="Page navigation"> <!--Page Navigation-->
+    <nav aria-label="Page navigation" id="paginationContainer"> <!--Page Navigation-->
       <ul class="pagination justify-content-center">
         <li class="page-item disabled">
-          <a class="page-link" href="#" aria-label="Previous">
+          <a class="page-link" href="#" aria-label="Previous" id="previous">
             <span aria-hidden="true">&laquo;</span>
             <span class="sr-only">Previous</span>
           </a>
@@ -211,7 +172,7 @@
         <li class="page-item active"><a class="page-link" href="#">1</a></li>
         <li class="page-item"><a class="page-link" href="#">2</a></li>
         <li class="page-item">
-          <a class="page-link" href="#" aria-label="Next">
+          <a class="page-link" href="#" aria-label="Next" id="next">
             <span aria-hidden="true">&raquo;</span>
             <span class="sr-only">Next</span>
           </a>
