--- a/app/view/inside_blog.html
+++ b/app/view/inside_blog.html
@@ -152,7 +152,7 @@
 
               <div id="crearComentario"> <!--Caja para crear comentarios-->
                 <div class="row">
-                  <div class="col-md-1"> <img class="user_comment_photo" id="userpostCommentPhoto" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTGzu3NaPLdn-EJx7iTK-s65246LPFfX3LGa_uPSYLCPg&s"> </div>
+                  <div class="col-md-1"> <img class="user_comment_photo" id="commentPhoto" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTGzu3NaPLdn-EJx7iTK-s65246LPFfX3LGa_uPSYLCPg&s"> </div>
                   <div class="col-md-11"><input class="col-md-12 comentarioInput" type="text" placeholder="Dejanos tu opinion..." id="commentContent"> 
                     <div class="d-flex justify-content-end">
                       <button class="btn-trans" id="comentar">Comentar</button> <button class="btn-trans" id="Cancelar">Cancelar</button>
@@ -164,7 +164,7 @@
 
               <div class="whitespace"></div> <!--Caja de los comentarios en texto-->
               <div id="ComentariosBox">
-                <div class="row">
+                <!-- <div class="row">
                   <div class="col-md-1"> <img class="user_comment_photo" src="https://thispersondoesnotexist.com/"> </div>
                   <div class="col-md-11"><span>User</span>
                   <br>
@@ -177,7 +177,7 @@
                   </div>
                   </div>
                   
-              </div>
+              </div> -->
               <hr>
             </div> <!--Caja de los comentarios en texto-->
             
@@ -224,6 +224,7 @@
   <script src="./../javascript/sidebar.js"></script>
   <script src="./../javascript/ajax-handler.js"></script>
   <script src="./../javascript/user.js"></script>
+  <script src="./../javascript/insideblog.js"></script>
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
