posts fully done
jajaja lol

--- a/app/view/createblog.html
+++ b/app/view/createblog.html
@@ -131,7 +131,7 @@
             <button class="btn-success" id="CreateAccept">Aceptar</button>
           </div>
         </div>
-        <div class="col-md-9 container align-items-center" id="Main_Content" > <!-- Main Content Container -->
+        <div class="col-md-9 container align-items-center" id="Main_Conten" > <!-- Main Content Container -->
                   <h1>Inserta tu titulo:</h1> <!-- mr-3 para agregar espacio entre el título y el input -->
                   <input type="text" class="form-control col-auto" placeholder="Inserta tu texto" maxlength="28" id="CreateTitle">
                   <div class="whitespace"></div>
