--- a/app/view/inside_blog.html
+++ b/app/view/inside_blog.html
@@ -131,7 +131,7 @@
             </div>
           </div>
           <div class="whitespace"></div>
-          <div class="inside-content">
+          <div class="inside-content d-flex justify-content-between align-items-center">
             <span id="content">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc libero ligula, blandit id felis at, maximus posuere turpis. 
               Quisque ultricies ac sapien eu bibendum. Donec tortor lectus, tristique sit amet sem eu, tincidunt tempor ipsum. 
@@ -140,8 +140,15 @@
               Nullam vulputate nunc vitae diam varius maximus. Donec lacinia metus eu erat tristique, eu accumsan arcu ultricies. 
               Donec eu placerat sapien. Pellentesque eget porttitor metus.  
             </span>
+            <div>
+              <button class="btn btn-danger" style="border-radius: 20px; margin-right: 10px;">
+                <i class="fa fa-trash" aria-hidden="true"></i>
+              </button> 
+              <button class="btn btn-info" style="border-radius: 20px;">
+                <i class="fa fa-pen" aria-hidden="true"></i>
+              </button>
             </div>
-
+          </div>
                     <!--COMENTARIOS-->
         
         <div class="container-fluid">
@@ -186,7 +193,9 @@
         
 
         </div> <!-- Main Content Container -->
+        
       </div> 
+      
       <div class="col-md-2 align-items-center justify-content-end" id="right_sidebar"><!--RightSidebar-->
         
         <div class="sidebar-item">
