--- a/app/view/inside_blog.html
+++ b/app/view/inside_blog.html
@@ -131,7 +131,7 @@
             </div>
           </div>
           <div class="whitespace"></div>
-          <div class="inside-content">
+          <div class="inside-content d-flex justify-content-between align-items-center">
             <span id="content">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc libero ligula, blandit id felis at, maximus posuere turpis. 
               Quisque ultricies ac sapien eu bibendum. Donec tortor lectus, tristique sit amet sem eu, tincidunt tempor ipsum. 
