Ya todo funciona =)

--- a/app/view/blog.html
+++ b/app/view/blog.html
@@ -18,8 +18,8 @@
       <a class="navbar-brand" href="home.html" id="home-link"><img src="https://th.bing.com/th/id/OIG2.mvAYZ_0sG8BPe5i4r0kB?w=1024&h=1024&rs=1&pid=ImgDetMain" style="height: 50px; width:50px"></a>
       <div class="flex-grow-1">
         <form class="form-inline my-2 my-lg-0">
-          <input class="form-control col-lg-5" type="text" placeholder="Lorem Ipsum">
-          <button class="btn btn-info" type="submit"><i class="fa fa-search" aria-hidden="true"></i></i></button>
+          <input  id="searchBar"     class="form-control col-lg-5" type="text" placeholder="Lorem Ipsum">
+          <button id="searchButton" class="btn btn-info" type="submit"><i class="fa fa-search" aria-hidden="true"></i></i></button>
         </form>
       </div>
       <div class="btn-group">
@@ -185,6 +185,8 @@
   <script src="./../javascript/user.js"></script>
   <script src="./../javascript/ajax-handler.js"></script>
   <script src="./../javascript/post.js"></script>
+  <script src="./../javascript/searchbar.js"></script>
+
  
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
